<resources>
    <string name="app_name">KulkasKu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="google_logo">Google</string>
    <string name="search">Search</string>
    <string name="logo_desc">Logo Desc</string>
    <string name="carousel_desc">Carousel Desc</string>
    <string name="balance">Balance</string>
    <string name="wallet">Wallet</string>
    <string name="bonus">Bonus</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="ai_hairstyle_desc">Ai Hairstyle</string>
    <string name="booking_desc">Booking</string>
    <string name="barbershop_desc">Barbershop</string>
    <string name="barberman_desc">barberman</string>
    <string name="allitem">All Item</string>
    <string name="sayur">Sayur</string>
    <string name="sembako">Sembako</string>
    <string name="buah">Buah</string>
    <string name="bumbu">Bumbu</string>
    <string name="protein">Protein</string>
    <string name="lainnya">Lainnya</string>
    <string name="frozen">Frozen</string>
    <string name="games">Games</string>
    <string name="save">Save</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="back">Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="post_comment">Post Comment</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add Video</string>
    <string name="capture_image">Capture Image</string>
    <string name="capture_video">Capture Video</string>
    <string name="post">Post</string>
    <string name="logout">Logout</string>
    <string name="back_to_home">Back to Home</string>
    <string name="user_settings">User Settings</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="back_button_desc">Back</string>
    <string name="product_image_desc">Product Image</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="academy">Academy</string>
    <string name="tips">Tips</string>
    <string name="tips_1">Tips 1</string>
    <string name="tips_2">Tips 2</string>
    <string name="tips_3">Tips 3</string>
    <string name="academy_1">Academy 1</string>
    <string name="academy_2">Academy 2</string>
    <string name="logo_description">Logo</string>
    <string name="google_sign_in">Sign In</string>
</resources>