<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.createpost.CreatePostFragment">

    <data>
        <variable
            name="viewModel"
            type="com.rmdev.kulkasku.ui.createpost.CreatePostViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/postContentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="What's on your mind?"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@={viewModel.postContent}" />

        <ImageButton
            android:id="@+id/addImageButton"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_add_image_p"
            android:contentDescription="@string/add_image"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postContentEditText" />

        <ImageButton
            android:id="@+id/addVideoButton"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_add_video_p"
            android:contentDescription="@string/add_video"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postContentEditText" />

        <ImageButton
            android:id="@+id/takePictureButton"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_capture_image_p"
            android:contentDescription="@string/capture_image"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addImageButton" />

        <ImageButton
            android:id="@+id/recordVideoButton"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_capture_video_p"
            android:contentDescription="@string/capture_video"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addVideoButton" />

        <ImageView
            android:id="@+id/mediaPreviewImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/takePictureButton" />

        <TextView
            android:id="@+id/uploadingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="UPLOADING THE CONTENT. PLEASE WAIT!"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            android:progressTint="@color/teal_200"
            android:indeterminateTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"/>

        <ImageButton
            android:id="@+id/postButton"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_post"
            android:contentDescription="@string/post"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mediaPreviewImageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
